@@ -33,7 +33,8 @@ namespace arangodb {
 FoxxQueuesFeature::FoxxQueuesFeature(application_features::ApplicationServer& server)
     : application_features::ApplicationFeature(server, "FoxxQueues"),
       _pollInterval(1.0),
-      _enabled(true) {
+      _enabled(true),
+      _startupWaitForSelfHeal(false) {
   setOptional(true);
   startsAfter<ServerFeaturePhase>();
 }
@@ -59,6 +60,19 @@ void FoxxQueuesFeature::collectOptions(std::shared_ptr<ProgramOptions> options) 
                      arangodb::options::Flags::DefaultNoComponents,
                      arangodb::options::Flags::OnCoordinator,
                      arangodb::options::Flags::OnSingle));
+  
+  options->addOption("--foxx.force-update-on-startup",
+                     "ensure all Foxx services are synchronized before "
+                     "completeing the boot sequence",
+                     new BooleanParameter(&_startupWaitForSelfHeal)
+                     arangodb::options::makeFlags(
+                     arangodb::options::Flags::DefaultNoComponents,
+                     arangodb::options::Flags::OnCoordinator,
+                     arangodb::options::Flags::OnSingle));
+}
+
+bool FoxxQueuesFeature::startupWaitForSelfHeal() const {
+  return _startupWaitForSelfHeal;
 }
 
 void FoxxQueuesFeature::validateOptions(std::shared_ptr<ProgramOptions> options) {
